--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
+    "devextreme": "^17.2.6",
+    "devextreme-angular": "^17.2.6",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
